--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -42,6 +42,9 @@
   --line-height-md: 1.5;
 
   --revenue-num: 100;
+
+  --sal-duration: 500ms;
+  --sal-delay: 100ms;
   }
 
   $highlight-color: var(--color-downy), var(--color-fuel-yellow), var(--color-mantis), var(--color-razzle-roze);
