--- a/css/sass/sections/_business.scss
+++ b/css/sass/sections/_business.scss
@@ -89,6 +89,18 @@
         font-size: var(--font-size-2xl);
         font-weight: 600;
 
+        @include breakpoint(desktop-sm) {
+            &:before {
+                position: absolute;
+                content: attr(data-spotlight);
+                -webkit-text-stroke: 2px var(--color-white);
+                color: transparent;
+                transform: translate(-8px, 8px);
+                opacity: 0.1;
+                z-index: -1;
+            }
+        }
+
         @include breakpoint(tablet) {
             font-size: var(--font-size-4xl);
         }
