--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,8 @@
   --line-height-sm: 1.25;
   --line-height-md: 1.5;
   --revenue-num: 100;
+  --sal-duration: 500ms;
+  --sal-delay: 100ms;
 }
 
 a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, main, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
@@ -78,12 +80,12 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
 
 .hero__video {
   position: absolute;
-  z-index: -1;
   top: 0;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  z-index: -1;
 }
 
 .hero__fade {
@@ -350,6 +352,19 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
   font-weight: 600;
 }
 
+@media (min-width: 1152px) {
+  .business-spotlight__spotlight:before {
+    position: absolute;
+    content: attr(data-spotlight);
+    -webkit-text-stroke: 2px var(--color-white);
+    color: transparent;
+    -webkit-transform: translate(-8px, 8px);
+            transform: translate(-8px, 8px);
+    opacity: 0.1;
+    z-index: -1;
+  }
+}
+
 @media (min-width: 768px) {
   .business-spotlight__spotlight {
     font-size: var(--font-size-4xl);
@@ -594,6 +609,56 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
 
 .cta__button {
   margin-top: 2.4rem;
+}
+
+.gallery {
+  padding-bottom: 3.2rem;
+}
+
+@media (min-width: 768px) {
+  .gallery {
+    padding-bottom: 8rem;
+  }
+}
+
+.gallery__container {
+  margin: 0 -2.4rem;
+}
+
+@media (min-width: 768px) {
+  .gallery__container {
+    height: 51.2rem;
+    margin: unset;
+  }
+}
+
+.gallery__slide {
+  height: auto;
+}
+
+.gallery__thumb {
+  margin-top: 0.8rem;
+  cursor: pointer;
+}
+
+.gallery__thumb .swiper-slide {
+  width: 25%;
+  opacity: 0.3;
+}
+
+.gallery__thumb .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.gallery__image {
+  height: 100%;
+}
+
+.gallery__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .revenue {
@@ -1014,6 +1079,12 @@ html, body {
   color: var(--color-red-ribbon);
 }
 
+mark {
+  padding: 0 0.4rem;
+  background-color: var(--color-fuel-yellow);
+  color: var(--color-woodsmoke);
+}
+
 .nowrap {
   white-space: nowrap;
 }
@@ -1400,6 +1471,7 @@ body {
 
 img {
   width: 100%;
+  height: auto;
 }
 
 .wrapper {
