--- a/css/style.scss
+++ b/css/style.scss
@@ -1,21 +1,4 @@
-@mixin breakpoint($point) {
-    @if $point == desktop {
-        @media (min-width: 1240px) { @content ; }
-    }
-    @else if $point == desktop-sm {
-        @media (min-width: 1152px) { @content ; }
-    }
-    @else if $point == laptop {
-        @media (min-width: 1024px) { @content ; }
-    }
-    @else if $point == tablet {
-        @media (min-width: 768px) { @content ; }
-    }
-    @else if $point == mobile-xs {
-        @media (max-width: 320px) { @content ; }
-    }
- }
-
+ @import "sass/UI/breakpoints";
  @import "sass/variables";
  @import "sass/reset";
  @import "sass/logos";
@@ -23,6 +6,7 @@
  @import "sass/sections/business";
  @import "sass/sections/players";
  @import "sass/sections/cta";
+ @import "sass/sections/gallery";
  @import "sass/sections/revenue";
  @import "sass/sections/jobs";
  
