--- a/css/sass/UI/_typography.scss
+++ b/css/sass/UI/_typography.scss
@@ -38,8 +38,8 @@ html, body {
 
 mark {
     padding: 0 0.4rem;
-    background-color: var(--color-fuel-yellow);
-    color: var(--color-woodsmoke);
+    background-color: var(--color-yankees-blue);
+    color: var(--color-white);
 }
 
 .nowrap {
