--- a/css/sass/sections/_players.scss
+++ b/css/sass/sections/_players.scss
@@ -46,6 +46,7 @@
         @include breakpoint(tablet) {
             justify-content: space-between;
             gap: 3.2rem;
+            margin-top: 6.4rem;
         }
     }
 
