--- a/css/sass/UI/_buttons.scss
+++ b/css/sass/UI/_buttons.scss
@@ -9,6 +9,10 @@
     cursor: pointer;
     transition: transform 200ms ease;
 
+    &:hover  {
+        transform: translateY(-0.2rem);
+    }
+
     &:active {
         transform: translateY(0.4rem);
     }
