--- a/css/sass/sections/_cta.scss
+++ b/css/sass/sections/_cta.scss
@@ -1,6 +1,10 @@
 .cta {
     padding: 2.4rem 0 4.8rem;
 
+    @include breakpoint(tablet) {
+        padding: 6.4rem 0;
+    }
+
     &__wrapper {
         display: flex;
         align-items: baseline;
