--- a/css/sass/sections/_jobs.scss
+++ b/css/sass/sections/_jobs.scss
@@ -2,7 +2,7 @@
     padding: 4.8rem 0 2.4rem;
 
     @include breakpoint(tablet) {
-        padding-top: 10.4rem;
+        padding-top: 16rem;
     }
 
     &__list {
@@ -14,6 +14,7 @@
         @include breakpoint(tablet) {
             grid-template-columns: repeat(2, 1fr);
             gap: 3.2rem;
+            margin-top: 4.8rem;
         }
     }
 
@@ -27,7 +28,7 @@
         }
 
         @include breakpoint(desktop) {
-            padding: 10rem 0 6.4rem;
+            padding: 10rem 0;
             font-size: var(--font-size-2xl);
         }
     }
@@ -84,6 +85,8 @@
     }
 
     &__button {
+        display: inline-block;
+        text-decoration: none;
         margin-top: 2.8rem;
     }
 
