--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -47,4 +47,8 @@
   --sal-delay: 100ms;
   }
 
+  // Grid gaps
+  $gap: 3.2rem;
+  $gap-sm: 2.4rem;
+
   $highlight-color: var(--color-downy), var(--color-fuel-yellow), var(--color-mantis), var(--color-razzle-roze);
