--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@
  
  @import "sass/sections/hero";
  @import "sass/sections/business";
+ @import "sass/sections/company";
  @import "sass/sections/players";
  @import "sass/sections/cta";
  @import "sass/sections/gallery";
