--- a/css/sass/sections/_hero.scss
+++ b/css/sass/sections/_hero.scss
@@ -1,9 +1,11 @@
 .hero {
+    position: relative;
     height: 100%;
 
     &__video {
         position: absolute;
         top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         object-fit: cover;
@@ -14,10 +16,14 @@
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 50%;
+        height: 100%;
         background-image: linear-gradient(to bottom, #171a2100, var(--color-woodsmoke));
         z-index: -1;
         text-align: center;
+
+        @include breakpoint(tablet) {
+            height: 50%;
+        }
     }
     
     &__nav {
