--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,7 @@ mark {
   width: 1.8rem;
   height: 1.8rem;
   margin-left: 1.6rem;
+  vertical-align: middle;
 }
 
 .link {
@@ -403,12 +404,14 @@ mark {
 }
 
 .hero {
+  position: relative;
   height: 100%;
 }
 
 .hero__video {
   position: absolute;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -420,11 +423,17 @@ mark {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 50%;
+  height: 100%;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#171a2100), to(var(--color-woodsmoke)));
   background-image: linear-gradient(to bottom, #171a2100, var(--color-woodsmoke));
   z-index: -1;
   text-align: center;
+}
+
+@media (min-width: 768px) {
+  .hero__fade {
+    height: 50%;
+  }
 }
 
 .hero__nav {
@@ -659,6 +668,10 @@ mark {
   text-transform: uppercase;
 }
 
+.business-spotlight__label span {
+  text-transform: none;
+}
+
 @media (min-width: 768px) {
   .business-spotlight__label {
     font-size: var(--font-size-ms);
@@ -717,6 +730,166 @@ mark {
   }
 }
 
+.company {
+  padding: 1.6rem 0;
+  font-size: var(--font-size-ms);
+}
+
+@media (min-width: 768px) {
+  .company {
+    padding: 8rem 0;
+    font-size: var(--font-size-lg);
+  }
+}
+
+.company__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.company__highlights {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0 -2.4rem;
+}
+
+@media (min-width: 768px) {
+  .company__highlights {
+    margin: 0 -1.6rem;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.company__companies {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  margin: 0 -1.2rem 1.2rem -1.2rem;
+}
+
+@media (min-width: 768px) {
+  .company__companies {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin: 1.6rem -1.6rem;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+
+.company__logo {
+  height: 2.4rem;
+  width: auto;
+  margin: 1.2rem;
+}
+
+@media (min-width: 768px) {
+  .company__logo {
+    margin: 1.6rem;
+    height: 3.2rem;
+  }
+}
+
+.company__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 0px;
+          flex: 1 1 0;
+  padding: 3.2rem;
+  margin: 0.4rem 0;
+  border-radius: 2.4rem;
+  text-align: center;
+  background-color: var(--color-ebony-clay);
+}
+
+@media (min-width: 768px) {
+  .company__item {
+    margin: 1.6rem;
+  }
+}
+
+.company__spotlight {
+  font-size: var(--font-size-3xl);
+  font-weight: 600;
+}
+
+@media (min-width: 768px) {
+  .company__spotlight {
+    font-size: var(--font-size-4xl);
+    line-height: 1;
+  }
+}
+
+@media (min-width: 1152px) {
+  .company__spotlight {
+    font-size: var(--font-size-super);
+  }
+}
+
+.company__heading {
+  margin-bottom: 1.6rem;
+}
+
+@media (min-width: 768px) {
+  .company__heading {
+    margin-bottom: 2.4rem;
+  }
+}
+
+.company__description {
+  color: var(--color-heather);
+  margin-top: 0.8rem;
+}
+
+.company__achievements {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 0px;
+          flex: 1 1 0;
+  font-size: var(--font-size-ms);
+}
+
+@media (min-width: 768px) {
+  .company__achievements {
+    font-size: var(--font-size-md);
+  }
+}
+
 .players {
   position: relative;
   padding: 4.8rem 0 0.8rem;
@@ -769,6 +942,7 @@ mark {
       -ms-flex-pack: left;
           justify-content: left;
   gap: 2.4rem;
+  grid-gap: 2.4rem;
   margin-top: 3.2rem;
 }
 
@@ -860,6 +1034,12 @@ mark {
 
 @media (min-width: 768px) {
   .player__name {
+    font-size: var(--font-size-xl);
+  }
+}
+
+@media (min-width: 1152px) {
+  .player__name {
     font-size: var(--font-size-2xl);
   }
 }
@@ -896,7 +1076,14 @@ mark {
 
 @media (min-width: 768px) {
   .player-stats__item {
+    font-size: var(--font-size-ms);
     padding-top: 2.4rem;
+  }
+}
+
+@media (min-width: 1152px) {
+  .player-stats__item {
+    font-size: var(--font-size-lg);
   }
 }
 
