--- a/css/sass/sections/_players.scss
+++ b/css/sass/sections/_players.scss
@@ -40,20 +40,22 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: left;
-        gap: 2.4rem;
-        grid-gap: 2.4rem;
-        margin-top: 3.2rem;
-
+        margin: $gap-sm/2 $gap-sm/-2;
+        
         @include breakpoint(tablet) {
             justify-content: space-between;
-            gap: 3.2rem;
-            margin-top: 6.4rem;
+            margin: $gap $gap/-2;
         }
     }
 
     &__logo {
         height: 2.4rem;
         width: auto;
+        margin: $gap-sm/2;
+
+        @include breakpoint(tablet) {
+            margin: $gap/2;
+        }
 
         @include breakpoint(desktop-sm) {
             height: 3.2rem;
