--- a/css/sass/UI/_buttons.scss
+++ b/css/sass/UI/_buttons.scss
@@ -1,9 +1,11 @@
 .button {
+    display: inline-block;
+    text-decoration: none;
     font-size: var(--font-size-ms);
     font-weight: 600;
     color: var(--color-white);
     border-radius: 1.2rem;
-    padding: 1.5rem 2.4rem 1.5rem;
+    padding: 1.2rem 2.4rem;
     border: 0;
     outline: none;
     cursor: pointer;
@@ -32,16 +34,14 @@
 
     @include breakpoint(desktop) {
         font-size: var(--font-size-lg);
-        padding: 1.8rem 2.4rem 1.7rem;
+        padding: 1.55rem 2.4rem;
     }
 }
 
 .button-secondary {
-    display: flex;
-    align-items: center;
     background-color: transparent;
     border: solid 2px var(--color-white);
-    padding: 1.3rem 2.4rem 1.3rem;
+    padding: 1rem 2.4rem;
 
     &:hover {
         background-color: var(--color-blue-ribbon-lighter);
@@ -50,7 +50,7 @@
 
     @include breakpoint(desktop) {
         font-size: var(--font-size-lg);
-        padding: 1.8rem 2.4rem 1.7rem;
+        padding: 1.35rem 2.4rem;
     }
 }
 
