gallery, jobs and footer web components

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -51,4 +51,4 @@
   $gap: 3.2rem;
   $gap-sm: 2.4rem;
 
-  $highlight-color: var(--color-downy), var(--color-fuel-yellow), var(--color-mantis), var(--color-razzle-roze);
+  $highlight-color: var(--color-downy), var(--color-fuel-yellow), var(--color-mantis), var(--color-razzle-roze), var(--color-picton-blue), var(--color-violet-red), var(--color-heliotrope);
