--- a/css/sass/sections/_business.scss
+++ b/css/sass/sections/_business.scss
@@ -59,6 +59,8 @@
 
 .business-spotlight {
     padding: 4.8rem 0;
+    -webkit-perspective: 1000;
+    -webkit-backface-visibility: hidden;
 
     @include breakpoint(mobile-xs) {
         padding: 1rem 0;
