--- a/css/sass/sections/_business.scss
+++ b/css/sass/sections/_business.scss
@@ -61,6 +61,7 @@
     padding: 4.8rem 0;
     -webkit-perspective: 1000;
     -webkit-backface-visibility: hidden;
+    visibility: visible;
 
     @include breakpoint(mobile-xs) {
         padding: 1rem 0;
