--- a/css/sass/sections/_business.scss
+++ b/css/sass/sections/_business.scss
@@ -59,9 +59,12 @@
 
 .business-spotlight {
     padding: 4.8rem 0;
-    -webkit-perspective: 1000;
-    -webkit-backface-visibility: hidden;
-    visibility: visible;
+	-webkit-perspective: 1000;
+	-webkit-backface-visibility: hidden;
+	-webkit-visibility: visible;
+	-webkit-font-smoothing: antialiased;
+	-webkit-transform-style: preserve-3d;
+	visibility: visible;
 
     @include breakpoint(mobile-xs) {
         padding: 1rem 0;
