--- a/css/style.css
+++ b/css/style.css
@@ -634,6 +634,9 @@ mark {
   padding: 4.8rem 0;
   -webkit-perspective: 1000;
   -webkit-backface-visibility: hidden;
+  -webkit-visibility: visible;
+  -webkit-font-smoothing: antialiased;
+  -webkit-transform-style: preserve-3d;
   visibility: visible;
 }
 
