--- a/css/style.css
+++ b/css/style.css
@@ -1407,6 +1407,10 @@ mark {
   }
 }
 
+.sal-animate {
+  will-change: transform, opacity;
+}
+
 .footer {
   padding: 3.2rem 0;
   font-size: var(--font-size-md);
